<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_description">
        Hey there! this is the shoe store app, in which you\'ll add some shoes to a list. have fun!
    </string>
    <string name="instructions_title">
        Please read all instructions below:
    </string>
    <string name="instructions_description">
        1. You will see some shoes previously added, so do not freak out! \n\n
        2. Click the + button in order to add more shoes.\n\n
        3. Make sure you complete all fields in the shoe detail screen.\n\n
        4. Once clicking the Save button you will se the newly created shoe in the shoe listing screen.\n\n</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="loginExistingAccount">Log In With An Existing Account</string>
    <string name="newLogin">Create A New Log In</string>
    <string name="enterEmailHint">Enter your email...</string>
    <string name="enterPasswordHint">Enter your password...</string>
    <string name="instructions">Go To Instructions</string>
    <string name="shoeListing">Shoe Listing</string>
    <string name="logout">Logout</string>
    <string name="addButtonContentDescription">This button goes to the shoe detail screen</string>
    <string name="login">Log In</string>
    <string name="welcome">Welcome!</string>
    <string name="instructionsTitle">Instructions</string>
    <string name="shoeListingTitle">Shoe Listing</string>
    <string name="shoeDetailsTitle">Shoe Detail</string>
    <string name="size">Size</string>
    <string name="name">Name</string>
    <string name="nameHint">Enter shoe name...</string>
    <string name="sizeHint">Enter shoe size...</string>
    <string name="companyHint">Enter shoe company...</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="descriptionHint">Enter shoe description...</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="nameValidation">Shoe name cannot be empty</string>
    <string name="sizeValidation">Shoe size cannot be empty</string>
    <string name="sizeValidationValue">Shoe size cannot be less or equal than 0</string>
    <string name="companyValidation">Shoe company cannot be empty</string>
    <string name="descriptionValidation">Shoe description cannot be empty</string>
</resources>
