<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.screens.instructions.InstructionsFragment"
        android:label="@string/instructionsTitle"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/instructionsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListingFragment"
        android:name="com.udacity.shoestore.screens.shoeListing.ShoeListingFragment"
        android:label="@string/shoeListingTitle"
        tools:layout="@layout/shoe_listing_fragment">
        <action
            android:id="@+id/action_shoeListingFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:popUpToInclusive="false" />
        <argument android:name="shoeList"
            app:argType="com.udacity.shoestore.models.Shoe[]"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.screens.shoeDetail.ShoeDetailFragment"
        android:label="@string/shoeDetailsTitle"
        tools:layout="@layout/shoe_detail_fragment">
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/shoeDetailFragment"
            app:popUpToInclusive="true" >
        </action>
        <argument
            android:name="shoeListDetail"
            app:argType="com.udacity.shoestore.models.Shoe[]" />
    </fragment>
</navigation>